--- a/core.css
+++ b/core.css
@@ -829,6 +829,7 @@
         margin: 0px;
     }
     #app-mount .typeWindows-2-g3UY:after {
+        content: "Kyonto;
         color: rgb(255,255,255,0.5);
         font-weight: 500;
 
